Fixed floating row jumping to the top of the page on mousemove

--- a/styles/drag_drop.scss
+++ b/styles/drag_drop.scss
@@ -4,14 +4,67 @@
   border: 1px dashed darkgrey;  
 }
 
+// .gripper {
+//   background-color: transparent;
+//   background-image: radial-gradient(rgba(225,225,225,1) 0%, rgba(200,200,200,1) 25%, rgba(255,255,255,0) 26%), radial-gradient(rgba(0,0,0,0.33333) 25%, rgba(255,255,255,0) 26%);
+//   background-size: 0.66667em 0.66667em, 0.66667em 0.66667em;
+//   background-position: 1.33333em 1.33333em, 1.36667em 1.36667em;
+//   bottom: 0.5em;
+//   cursor: move;
+//   left: 0.5em;
+//   opacity: 0;
+//   // position: absolute;
+//   top: 0.5em;
+//   transition: opacity 200ms;
+//   width: 1.33333em;
+// }
+
+// .placeholder .gripper {
+//   transition: none;
+// }
+// .movable .gripper,
+// .table-horizontal-heading-component:hover .gripper,
+// .objective-description:hover .gripper {
+//   opacity: 0.5;
+// }
+// .movable .gripper,
+// .table-horizontal-heading-component .gripper:hover,
+// .objective-description .gripper:hover {
+//   opacity: 1;
+// }
+
+
+/* hackily disable user selection on draggable things */
+.main-container {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
 .movable {
   box-shadow: 5px 5px 5px rgba(0,0,0,.25);
   cursor: move;
   display: flex;
   left: 0;
   position: fixed;
-  background-color: yellow;
+  background: #31384E;
+  opacity: 0.9;
+  // background-color: yellow;
 }
+
+/* movable is one of the hidden tables */
+// .movable {
+//   box-shadow: 2px 2px 5px rgba(0,0,0,.25);
+//   cursor: move;
+//   display: flex;
+//   left: 0;
+//   opacity: 0.9;
+//   position: fixed;
+//   top: 0;
+// }
 
 .movable.hidden {
   display: none;
